# radio-beam

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.md  beam.py  pyproject.toml  setup.cfg  setup.py  specs.txt  tox.ini
.github/workflows/: main.yml  publish.yml
docs/: api.rst  commonbeam.rst  conf.py  convolution_kernels.rst  index.rst  install.rst  installing.rst  nitpick-exceptions  plotting_beams.rst  rtd-pip-requirements
radio_beam/: __init__.py  _astropy_init.py  beam.py  commonbeam.py  conftest.py  multiple_beams.py  source_deconvolution.py  utils.py
radio_beam/test/: NGC0925.bima.mmom0.fits  test_beam.py  test_beam.py~
radio_beam/test/data/: m83.moment0.fits
radio_beam/tests/: setup_package.py  test_beam.py  test_beams.py  test_kernels.py  test_source_deconvolution.py
radio_beam/tests/data/: Makefile  commonbeam_CASA_comparison.csv  generate_commonbeam_table.py  header_aips.hdr
radio_beam/tests/data/NGC0925.bima.mmom0.image/: table.f0  table.f0_TSM0
radio_beam/tests/data/NGC0925.bima.mmom0.image/logtable/: table.f0
radio_beam/tests/data/NGC0925.bima.mmom0.image/mask0/: table.f0
