[project]
name = "radio-beam"
dynamic = [
    "version"
]
description = "Operations for radio astronomy beams with astropy."
readme = "README.rst"
authors = [
    { name = "Eric Koch", email = "koch.eric.w@gmail.com" },
    { name = "Adam Ginsburg", email = "adam.g.ginsburg@gmail.com" },
    { name = "Tom Robitaille" },
    { name = 'Erik Rosolowsky'},
    { name = 'Adam Leroy'},
]
license = "BSD-3-Clause"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "astropy>=6.1",
  "numpy>=1.24",
  "scipy>=1.8",
  "packaging>=19",
  "setuptools>=62.3.3",
  "matplotlib>=3.5",
  "qtpy>=2.0",
  "matplotlib"
]


[project.optional-dependencies]
docs = [
  "sphinx-astropy",
]
test = [
  "pytest>=5",
  "pytest-astropy>=0.10",
  "pytest-cov>=3",
  ]
dev = [
    "numpy>=0.0.dev0",
    "astropy>=0.0.dev0",
]

[project.urls]
homepage = "https://radio-beam.readthedocs.org"
documentation = "https://radio-beam.readthedocs.org"
repository = "https://github.com/radio-astro-tools/radio-beam"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
            "setuptools>=61.2",
            "setuptools_scm"
           ]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.package-data]
"radio_beam.tests" = [
  "data/*",
  "data/*/*",
]

[tool.pytest.ini_options]
minversion = "3.0"
norecursedirs = [ "build", "docs/_build" ]
doctest_plus = "enabled"
filterwarnings = [
    "error::ResourceWarning",
    "error::DeprecationWarning",
    # Triggered in radio-beam as a DeprecationWarning or with newer Python as a SyntaxWarning
    "ignore:invalid escape sequence",
]

[tool.coverage.run]
omit = [
  "radio_beam/__init__*",
  "radio_beam/conftest.py",
  "radio_beam/*setup*",
  "radio_beam/*/tests/*",
  "radio_beam/tests/test_*",
  "radio_beam/extern/*",
  "radio_beam/utils/compat/*",
  "radio_beam/version*",
  "radio_beam/wcs/docstrings*",
  "radio_beam/_erfa/*",
  "*/radio_beam/__init__*",
  "*/radio_beam/conftest.py",
  "*/radio_beam/*setup*",
  "*/radio_beam/*/tests/*",
  "*/radio_beam/tests/test_*",
  "*/radio_beam/extern/*",
  "*/radio_beam/utils/compat/*",
  "*/radio_beam/version*",
  "*/radio_beam/wcs/docstrings*",
  "*/radio_beam/_erfa/*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  'def main\(.*\):',
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]

[tool.upload_docs]
upload-dir = "docs/_build/html"
show-response = "1"
