[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[metadata]
package_name = radio-beam
description = Radio Beam object for use with astropy
long_description = This package provides tools for working with beams in radio data.
author = Adam Leroy, Adam Ginsburg, Erik Rosolowsky, Tom Robitaille, and Eric Koch
author_email = adam.g.ginsburg@gmail.com, koch.eric.w@gmail.com
license = BSD
url = http://radio_beam.readthedocs.org
edit_on_github = False
github_project = radio-astro-tools/radio-beam

[entry_points]
