[metadata]
name = radio-beam
description = Operations for radio astronomy beams with astropy
long_description = file: README.rst
author = Adam Leroy, Adam Ginsburg, Erik Rosolowsky, Tom Robitaille, and Eric Koch
author_email = adam.g.ginsburg@gmail.com, koch.eric.w@gmail.com
license = BSD
url = http://radio_beam.readthedocs.org
edit_on_github = False
github_project = radio-astro-tools/radio-beam


[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    numpy>=1.8.0
    six
    scipy

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
docs =
    sphinx-astropy
all =
    scipy

[options.package_data]
radio_beam.tests = data/*

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

