[metadata]
name = radio-beam
description = Operations for radio astronomy beams with astropy
long_description = file: README.rst
author = Adam Leroy, Adam Ginsburg, Erik Rosolowsky, Tom Robitaille, and Eric Koch
author_email = adam.g.ginsburg@gmail.com, koch.eric.w@gmail.com
license = BSD
url = http://radio_beam.readthedocs.org
edit_on_github = False
github_project = radio-astro-tools/radio-beam


[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    numpy>=1.8.0
    six
    scipy

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
docs =
    sphinx-astropy
    matplotlib
all =
    scipy
    matplotlib

[options.package_data]
radio_beam.tests = data/*

[tool:pytest]
testpaths = "radio_beam" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
source = radio_beam
omit =
   radio_beam/_astropy_init*
   radio_beam/conftest*
   radio_beam/cython_version*
   radio_beam/setup_package*
   radio_beam/*/setup_package*
   radio_beam/*/*/setup_package*
   radio_beam/tests/*
   radio_beam/*/tests/*
   radio_beam/*/*/tests/*
   radio_beam/version*

[coverage:report]
exclude_lines =
   # Have to re-enable the standard pragma
   pragma: no cover

   # Don't complain about packages we have installed
   except ImportError

   # Don't complain if tests don't hit assertions
   raise AssertionError
   raise NotImplementedError

   # Don't complain about script hooks
   def main\(.*\):

   # Ignore branches that don't pertain to this version of Python
   pragma: py{ignore_python_version}

   # Don't complain about IPython completion helper
   def _ipython_key_completions_
